--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <body style="background-color: rgb(20, 20, 20); font-family: Arial, Helvetica, sans-serif; text-align: center; padding-top: 2em;">
         <h1 style="color: white;">d0nutt.github.io</h1>
         <hr style="width: 50%;">
-        <h3 style="color: white; text-align: center;">My Resume: <a href="/Assignment 3 Resumer/resume">Click Here!</a></h3>
+        <h3 style="color: white; text-align: center;">My Resume: <a href="/Assignment 3 Resume/resume">Click Here!</a></h3>
     </body>
 </html>
