--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
         <h1 style="color: white;">d0nutt.github.io</h1>
         <hr style="width: 50%;">
         <h3 style="color: white; text-align: center;">My Resume: <a href="/Assignment 3 Resume/resume">Click Here!</a></h3>
+        <h3 style="color: white; text-align: center;">Recipe Card Builder: <a href="/Assignment 4 Recipe Card Builder/recipe-card">Click Here!</a></h3>
     </body>
 </html>
