--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <h3 style="color: white; text-align: center;">My Resume: <a href="/Assignment 3 Resume/resume">Click Here!</a></h3>
         <h3 style="color: white; text-align: center;">Recipe Card Builder: <a href="/Assignment 4 Recipe Card Builder/recipe-card">Click Here!</a></h3>
         <h3 style="color: white; text-align: center;">CSS Component Library: <a href="/Assignment 5 CSS Component Library/spinup">Click Here!</a></h3>
+        <h3 style="color: white; text-align: center;">Famous Quotes Application: <a href="/Assignment 6 Mobile-Friendly Famous Quotes Application/famousquotes">Click Here!</a></h3>
     </body>
 </html>
